# ReasoningBank-MCP

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  config.yaml  example_config.yaml  pyproject.toml  requirements.txt  test_components.py
docs/: QUICKSTART.md
src/: __init__.py  __main__.py  config.py  default_config.yaml  server.py
src/deduplication/: __init__.py  base.py  factory.py
src/deduplication/strategies/: semantic_dedup.py
src/initializers/: __init__.py  base.py  embedding_initializer.py  llm_initializer.py  memory_manager_initializer.py  retrieval_initializer.py  storage_initializer.py  tools_initializer.py
src/llm/: __init__.py  base.py  factory.py
src/llm/providers/: __init__.py  anthropic.py  dashscope.py  openai.py
src/merge/: __init__.py  base.py  factory.py
src/merge/strategies/: __init__.py  llm_merge.py  voting_merge.py
src/prompts/: __init__.py  formatters.py  templates.py
src/retrieval/: __init__.py  base.py  factory.py
src/retrieval/strategies/: __init__.py  cosine_retrieval.py  hybrid_retrieval.py
src/services/: __init__.py  memory_manager.py
src/storage/: __init__.py  base.py
src/storage/backends/: json_backend.py
src/tools/: __init__.py  extract_memory.py  retrieve_memory.py
src/utils/: __init__.py  similarity.py
tests/: test_mcp_call.py  test_retrieve_error.py  test_server_init.py
