[project]
name = "reasoning-bank-mcp"
version = "0.1.3"
description = "ReasoningBank MCP Server - Memory-augmented reasoning for AI agents"
authors = [
    {name = "Wang Han", email = "hanw57276@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=0.9.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "sse-starlette>=1.6.0",
]
[project.urls]
Homepage = "https://github.com/hanw39"
Repository = "https://github.com/hanw39/ReasoningBank-MCP"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = 'py310'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
reasoning-bank-mcp = "src.server:run_server"